# Travel-Planner

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: test.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/agent/: __init__.py  graph.py  prompts.py  router.py
backend/agent/tools/: classify_destination.py  live_conditions.py  rag_retrieve.py
backend/core/: __init__.py  config.py  deps.py  security.py  webhook.py
backend/db/: __init__.py  engine.py  models.py  seed_destinations.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial_schema.py  0002_embedding_dim_3072.py  0003_destination_image_url.py
backend/ml/: __init__.py  destinations.csv  model_meta.json  notebook.ipynb  results.csv  train.py
backend/rag/: __init__.py  chunker.py  embedder.py  ingest.py  loader.py  store.py
backend/rag/docs/: destinations_styles_headings.json
backend/routers/: __init__.py  agent.py  auth.py  health.py  tools.py
backend/schemas/: __init__.py  agent.py  auth.py  tools.py  trip.py  webhook.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_classifier_tool.py  test_rag.py  test_schemas.py  test_tools.py
backend/tools/: __init__.py  classify_destination.py  live_conditions.py  rag_retrieve.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useStream.ts
(+10 files in other folders)
