# Backend dependencies — managed by uv. NEVER use pip.
# Run `uv sync` to create the venv and install. `uv add <pkg>` to add a runtime dep.
# `uv add --dev <pkg>` for dev-only.

[project]
name = "smart-travel-planner-backend"
version = "0.1.0"
description = "FastAPI backend — agent, RAG, ML classifier, auth, persistence."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-genai>=0.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "cachetools>=5.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pgvector>=0.3.6",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.0",
    "pymupdf>=1.27.2.3",
    "psycopg2-binary>=2.9.12",
    "langgraph>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["E501", "S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
